--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:100,300,400,500,700,900");
 @import "../../styles/common";
+@import "../../styles/global";
 
 .App {
     @include font-body;
